# ion_rs

./: CHANGELOG.md  CHANGELOG.rs  Cargo.toml  README.md
.github/workflows/: test.yml
benches/: parse.rs
benches/data/: def_hotel_on_end.ion  def_hotel_on_start.ion
src/: display.rs  lib.rs  main.rs  old_parser.rs  parser.rs  toml_parser.rs  validator.rs  writer.rs
src/ion/: display.rs  from_ion.rs  from_row.rs  ion_error.rs  mod.rs  section.rs  value.rs
src/ion/decoder/: mod.rs  rustc_serialize.rs  serde.rs
tests/: hotel.ion  parse.rs  spec.ion  test2.ion
tests/data/: broken_array_and_eof.ion  broken_dictionary_and_eof.ion  hotel.ion  test.ion
tests/expected/: broken_array_and_eof.ion  broken_dictionary_and_eof.ion  hotel.ion  test.ion
