[package]
name = "ion"
version = "0.8.8"
description = "parse and process ion files"
license = "MIT"
homepage = "http://github.com/pzol/ion_rs"
repository = "http://github.com/pzol/ion_rs"
authors = ["Piotr Zolnierek <pzolnierek@gmail.com>"]
edition = "2021"

[dev-dependencies]
quickcheck = { version = "0.9.2", default-features = false }
quickcheck_macros = { version = "0.9.1", default-features = false }
regex = { version = "1.3.3", default-features = false, features = ["std", "unicode"] }
