[package]
name = "ion"
version = "0.8.8"
description = "parse and process ion files"
license = "MIT"
homepage = "https://github.com/ion-rs/ion"
repository = "https://github.com/ion-rs/ion"
authors = ["Marcin Szewczyk <platatita@gmail.com>", "Piotr Zolnierek <pzolnierek@gmail.com>"]
edition = "2021"

[dev-dependencies]
quickcheck = { version = "0.9.2", default-features = false }
quickcheck_macros = { version = "0.9.1", default-features = false }
regex = { version = "1.3.3", default-features = false, features = ["std", "unicode"] }
